@@ -22,15 +22,15 @@
  */
 
 #include <stdio.h>
-#include <assert.h>
+#include "tmacros.h"
 
 #include <rtems.h>
 #include <rtems/ramdisk.h>
 #include <rtems/diskdevs.h>
 
-#define ASSERT_SC(sc) assert((sc) == RTEMS_SUCCESSFUL)
+#define ASSERT_SC(sc) rtems_test_assert((sc) == RTEMS_SUCCESSFUL)
 
-#define ASSERT_SC_EQ(sc, sc_expected) assert((sc) == (sc_expected))
+#define ASSERT_SC_EQ(sc, sc_expected) rtems_test_assert((sc) == (sc_expected))
 
 #define BLOCK_SIZE 512U
 
@@ -51,7 +51,7 @@ static void test_diskdevs(void)
   dev_t const big_minor_dev = rtems_filesystem_make_dev_t(0, (rtems_device_minor_number) -2);
   ramdisk *const rd = ramdisk_allocate(NULL, BLOCK_SIZE, BLOCK_COUNT, false);
 
-  assert(rd != NULL);
+  rtems_test_assert(rd != NULL);
 
   sc = rtems_disk_io_initialize();
   ASSERT_SC(sc);
@@ -127,13 +127,13 @@ static void test_diskdevs(void)
   ASSERT_SC(sc);
 
   physical_dd = rtems_disk_obtain(physical_dev);
-  assert(physical_dd != NULL && physical_dd->uses == 2);
+  rtems_test_assert(physical_dd != NULL && physical_dd->uses == 2);
 
   sc = rtems_disk_release(physical_dd);
   ASSERT_SC(sc);
 
   logical_dd = rtems_disk_obtain(logical_dev);
-  assert(logical_dd != NULL && logical_dd->uses == 1);
+  rtems_test_assert(logical_dd != NULL && logical_dd->uses == 1);
 
   sc = rtems_disk_delete(physical_dev);
   ASSERT_SC(sc);
@@ -142,10 +142,10 @@ static void test_diskdevs(void)
   ASSERT_SC_EQ(sc, RTEMS_RESOURCE_IN_USE);
 
   dd = rtems_disk_obtain(physical_dev);
-  assert(dd == NULL);
+  rtems_test_assert(dd == NULL);
 
   dd = rtems_disk_obtain(logical_dev);
-  assert(dd == NULL);
+  rtems_test_assert(dd == NULL);
 
   sc = rtems_disk_release(logical_dd);
   ASSERT_SC(sc);
